--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,7 @@
 { 
   "presets": [["@babel/preset-env" , {
-    "useBuiltIns" : "usage"
+    "useBuiltIns" : "usage",
+    "corejs": 3
   }]]
 }
   
