--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "hw",
   "main": "src/index.js",
   "scripts": {
-    "start": "webpack-dev-server --mode development",
+    "start": "webpack-dev-server --mode development --port 9000",
     "test": "jest --coverage --passWithNoTests",
+    "e2e": "jest --testPathPattern='./e2e/'",
     "lint": "eslint .",
     "build": "webpack --mode production"
   },
@@ -27,17 +28,23 @@
     "html-webpack-plugin": "^3.2.0",
     "husky": "^2.1.0",
     "jest": "^24.7.1",
+    "jest-puppeteer": "^4.1.1",
     "mini-css-extract-plugin": "^0.6.0",
+    "puppeteer": "^1.17.0",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.1",
     "webpack-dev-server": "^3.3.1"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.4.4"
+    "@babel/polyfill": "^7.4.4",
+    "core-js": "3"
+  },
+  "jest": {
+    "preset": "jest-puppeteer"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "yarn lint && yarn test"
+      "pre-commit": "yarn lint && yarn e2e"
     }
   }
 }
