--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -17,7 +17,7 @@ build_script:
 - yarn build # команда сборки
 
 test_script:
-  - yarn lint && yarn test # скрипт сборки
+  - yarn lint && yarn e2e # скрипт сборки
 
 deploy_script: # скрипт развёртывания
   - git config --global credential.helper store
